Add UMAs to collect EDID colorimetry failures.

This CL adds two metrics in drm_util.cc:

- DrmUtil.CreateDisplaySnapshot.HasEdidBlob (boolean): to detect whether an EDID
blob is detected in the CreateDisplaySnapshot function. There are no
existing unit tests for this function, so no tests are added for this metric.

- DrmUtil.GetColorSpaceFromEdid.ChecksOutcome (histogram): to detect
whether the sanity checks pass in the GetColorSpaceFromEdid function (or
which one fails). Existing unit tests are modified to test this metric.

Also, some unused includes are removed from drm_util_unittest.cc.

Bug: 829506
Change-Id: Ib1cfc14577630e6649640da9b0a0b663a36296d5
Reviewed-on: https://chromium-review.googlesource.com/1014522
Commit-Queue: Andres Calderon Jaramillo <andrescj@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Reviewed-by: Brian White <bcwhite@chromium.org>
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553773}
Former-commit-id: c474af563adbcba225b58f7d674a271aa8cbc2e2